Fixed spacing for expand button

--- a/components/styling/global.css
+++ b/components/styling/global.css
@@ -211,7 +211,7 @@
     padding-right: unset !important;
 }
 
-.inrgiU {
+.sc-iCoGMd {
     height: 60% !important;
     width: 60% !important;
 }
